--- a/Project/Chat/Chat.csproj
+++ b/Project/Chat/Chat.csproj
@@ -87,7 +87,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BussinesLayer\Client.cs" />
+    <Compile Include="BussinesLayer\Server.cs" />
     <Compile Include="Installers\Installer.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindowView.xaml.cs">
       <DependentUpon>MainWindowView.xaml</DependentUpon>
